# ros2_basic

./: README.md  package.xml  setup.py
launch/: display.launch.py  gazebo.launch.py
service_and_client/: client.py  server.py
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher.cpp  subscriber.cpp
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher.py  subscriber.py
src/robot_sim/: package.xml  setup.py
src/robot_sim/config/: controllers.yaml  diff_drive.yaml
src/robot_sim/launch/: display.launch.py  gazebo.launch.py  spawn_robot.launch.py
src/robot_sim/urdf/: arm.xacro  robot.urdf.xacro  sensors.xacro  wheels.xacro
src/robot_sim/worlds/: custom_world.sdf
src/turtle_patrol/: CMakeLists.txt  package.xml  setup.py
src/turtle_patrol/action/: ExecuteCircle.action
src/turtle_patrol/turtle_patrol/: circle_patrol_client.py  circle_patrol_server.py
urdf/: robot.urdf.xacro
worlds/: custom_world.sdf
